--- a/src/main/resources/assets/randomod/lang/en_us.json
+++ b/src/main/resources/assets/randomod/lang/en_us.json
@@ -2,6 +2,6 @@
   "item.randomod.secret_item": "Secret Item",
   "item.randomod.secret_food": "Secret Food",
   "itemGroup.randomod":"RandoMod ItemGroup",
-  "item.randomod.secret_sword": "Secret Sword",
+  "item.randomod.secret_sword": "Secret Sword"
 
 }
